# amcsh

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh
include/: amcsh.h  parser.h
src/: builtins.c  cmd_cache.c  completion.c  executor.c  history.c  job_control.c  main.c  parser.c  thread_pool.c
